feat(domain value): コレクションオブジェクトを追加し、「購入希望の識別番号と結果生成した内容が異なる場合」という知識をまとめる。 * RequestCodeItemを活用するようにリファクタリング * 対応する具体例を追加
* 段取り
  * Serviceのテストコードから追加
  * 新たなクラス作成と対応するテストコード追加
  * その後新たなクラスに置き換え・リファクタリング