@@ -3,8 +3,6 @@ package org.example.domain.entity;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
@@ -12,15 +10,19 @@ import org.example.domain.DomainException;
 import org.example.domain.value.DirectItem;
 import org.example.domain.value.Item;
 import org.example.domain.value.Money;
+import org.example.domain.value.RequestCodeItem;
 import org.junit.jupiter.api.Test;
 
 class DealTest {
 
   @Test
   void 合計商品数が100を超えるとき例外が発生すること() {
-    var targetItems = List.of(
-        new Item("001", 250),
-        new Item("002", 100)
+    var targetItems = new RequestCodeItem(
+        List.of(
+          new Item("001", 250),
+          new Item("002", 100)
+        ),
+        List.of("001", "002")
     );
     var targetDirectItems = IntStream.range(0, 100).mapToObj(v -> new DirectItem("00" + v, 250))
         .toList();
@@ -33,9 +35,12 @@ class DealTest {
 
   @Test
   void charge_識別番号の結果350円の商品に対して支払いを400円渡しお釣りが50円であること() {
-    var targetItems = Arrays.asList(
-        new Item("001", 250),
-        new Item("002", 100)
+    var targetItems = new RequestCodeItem(
+        List.of(
+            new Item("001", 250),
+            new Item("002", 100)
+        ),
+        List.of("001", "002")
     );
     var targetMoney = new Money("400");
     var deal = new Deal(targetItems, List.of(), targetMoney);
@@ -45,8 +50,9 @@ class DealTest {
 
   @Test
   void charge_識別番号001_種別番号900_300円の結果550円の商品に対して支払いを1000円渡しお釣りが450円であること() {
-    var targetItems = List.of(
-        new Item("001", 250)
+    var targetItems = new RequestCodeItem(
+        List.of(new Item("001", 250)),
+        List.of("001")
     );
     var targetDirectItems = List.of(
         new DirectItem("900", 300)
@@ -59,9 +65,12 @@ class DealTest {
 
   @Test
   void charge_識別番号001と002_種別番号900_300円と800_200円の結果850円の商品に対して支払いを1000円渡しお釣りが450円であること() {
-    var targetItems = List.of(
-        new Item("001", 250),
-        new Item("002", 100)
+    var targetItems = new RequestCodeItem(
+        List.of(
+            new Item("001", 250),
+            new Item("002", 100)
+        ),
+        List.of("001", "002")
     );
     var targetDirectItems = List.of(
         new DirectItem("900", 300),
@@ -75,7 +84,10 @@ class DealTest {
 
   @Test
   void charge_合計金額が1000000を超えるとき例外が発生すること() {
-    var targetItems = new ArrayList<Item>();
+    var targetItems = new RequestCodeItem(
+        List.of(),
+        List.of()
+    );
 
     var targetDirectItems = IntStream.range(0, 99).mapToObj(
         v -> new DirectItem("00" + v, 10000)
@@ -96,9 +108,12 @@ class DealTest {
 
   @Test
   void charge_合計金額よりも支払い情報が少ないとき例外が発生すること() {
-    var targetItems = List.of(
-        new Item("001", 250),
-        new Item("002", 100)
+    var targetItems = new RequestCodeItem(
+        List.of(
+            new Item("001", 250),
+            new Item("002", 100)
+        ),
+        List.of("001", "002")
     );
     var targetDirectItems = List.of(
         new DirectItem("900", 300),
